--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 :root {
   --primary-color: #6c63ff;
   --secondary-color: #f5f2fe;
+  --third-color: #212529;
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
@@ -16,20 +17,29 @@ h3 {
 
 h1 {
   font-size: 96px;
+  font-family: 'Playfair Display', serif;
 }
 
 h2 {
   font-size: 48px;
+  font-family: 'Playfair Display', serif;
 }
 
 h3 {
   font-size: 24px;
   opacity: 0.7;
+  font-family: 'Poppins', sans-serif;
 }
 
 p {
   font-size: 18px;
   line-height: 1.5;
+  font-family: 'Poppins', sans-serif;
+}
+a {
+  font-family: 'Poppins', sans-serif;
+  text-decoration: none;
+  color: var(--third-color);
 }
 
 .navigation-links {
