--- a/src/style.css
+++ b/src/style.css
@@ -37,7 +37,7 @@ p {
 .hero {
   background-color: var(--secondary-color);
   text-align: center;
-  padding: 160px 20px;
+  padding: 160px;
 }
 
 .hero h2 {
@@ -72,15 +72,6 @@ p {
 
 .navigation-links a {
   margin: 20px;
-}
-
-.secondary-link {
-  border-radius: 4px;
-  padding: 20px 15px;
-  text-decoration: none;
-  text-transform: capitalize;
-  color: var(--primary-color);
-  border: 1px solid var(--primary-color);
 }
 
 .homepage-link {
