--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,7 @@ h1,
 h2,
 h3 {
   margin: 0;
+  display: block;
 }
 
 h1 {
@@ -29,7 +30,7 @@ h2 {
 }
 
 p {
-  font-size: 18px;
+  font-size: 16px;
   line-height: 1.5;
   font-family: var(--default-font-family);
 }
@@ -43,6 +44,7 @@ p {
 .hero h2 {
   font-size: 36px;
   color: var(--heading-color);
+  line-height: 1, 5;
 }
 
 .hero h3 {
@@ -62,6 +64,21 @@ p {
   line-height: 27px;
   padding: 15px 30px;
   box-shadow: var(--box-shadow);
+}
+
+.btn-branding-outline {
+  font-family: var(--default-font-family);
+  text-decoration: none;
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+}
+
+.project-description {
+  padding: 120px 60px;
 }
 
 .navigation-links {
@@ -98,4 +115,24 @@ p {
 
 .email-link:hover {
   text-decoration: underline;
+}
+
+@media (max-width: 900px) {
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
+  h1 {
+    font-size: 44px;
+    line-height: 2;
+  }
+  h2 {
+    font-size: 36px;
+  }
+  h3 {
+    font-size: 16px;
+  }
+  .hero {
+    padding: 0;
+  }
 }
