Re-worked the links

--- a/src/style.css
+++ b/src/style.css
@@ -116,6 +116,10 @@ p {
 .email-link:hover {
   text-decoration: underline;
 }
+.social {
+  text-decoration: none;
+  color: var(--third-color);
+}
 
 @media (max-width: 900px) {
   .project-description {
