--- a/src/style.css
+++ b/src/style.css
@@ -54,6 +54,32 @@ p {
   color: var(--heading-color);
 }
 
+.about-section {
+  padding: 20px 120px;
+}
+
+.about-section-content {
+  margin: 30px;
+}
+
+.about-section h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+
+.about-section h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+  font-weight: bold;
+  color: #272142;
+}
+
+.about-section p {
+  font-size: 16px;
+  color: #272142;
+  opacity: 70%;
+}
+
 .btn-branding {
   font-family: var(--default-font-family);
   text-decoration: none;
@@ -97,14 +123,6 @@ p {
   display: block;
 }
 
-.about-paragraphs {
-  margin: 30px 0;
-}
-
-.about-paragraphs p {
-  margin: 10px;
-}
-
 .email-link {
   display: flex;
   justify-content: center;
@@ -137,6 +155,10 @@ p {
     font-size: 16px;
   }
   .hero {
+    padding: 0;
+  }
+  .about-section {
+    text-align: center;
     padding: 0;
   }
 }
