--- a/src/style.css
+++ b/src/style.css
@@ -54,28 +54,35 @@ p {
   color: var(--heading-color);
 }
 
-.about-section {
+.content-container {
   padding: 20px 120px;
 }
 
-.about-section-content {
+.content {
   margin: 30px;
 }
 
-.about-section h1 {
+.content h3 {
+  font-size: 24px;
+  font-family: var(--default-font-family);
+  font-weight: 700;
+  line-height: 1, 5;
+}
+
+.content-container h1 {
   font-size: 64px;
   line-height: 80px;
 }
 
-.about-section h2 {
+.content-container h2 {
   font-size: 18px;
   font-family: var(--default-font-family);
   font-weight: bold;
   color: #272142;
 }
 
-.about-section p {
-  font-size: 16px;
+.content-container p {
+  font-size: 14px;
   color: #272142;
   opacity: 70%;
 }
@@ -157,7 +164,7 @@ p {
   .hero {
     padding: 0;
   }
-  .about-section {
+  .content-container {
     text-align: center;
     padding: 0;
   }
