--- a/src/style.css
+++ b/src/style.css
@@ -36,6 +36,15 @@ p {
   font-family: var(--default-font-family);
 }
 
+ul {
+  list-style: none;
+  margin: 10px;
+}
+
+li {
+  margin: 10px;
+}
+
 nav {
   padding: 20px 0;
 }
